# cmake-rs

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md  azure-pipelines.yml  crates.js  search-index.js  settings.html  source-files.js
.github/workflows/: main.yml  publish.yml
ci/: azure-steps.yml
cmake/: all.html  fn.build.html  index.html  sidebar-items.js  struct.Config.html
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
src/: lib.rs  registry.rs
src/cmake/: lib.rs.html
test-crate/: Cargo.toml
test-crate/src/: lib.rs
tests/: handling_reset_cache_after_set_var.rs
